--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -7,7 +7,7 @@ mixin AddEditReminderForm(announcement, reminders)
 
 
 //TODO refactor
-mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adminRecipients)
+mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adminRecipients, userRole)
     +Hidden('id', announcement.getId().valueOf())
     +Hidden('announcementtypeid', announcement.getAnnouncementTypeId())
     +Hidden('statetyped', announcement.getStateTyped())
@@ -78,7 +78,9 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
         ann = announcement
         -ann.setNeedButtons(true);
         -ann.setNeedDeleteButton(true);
-            +RenderWith(ann, chlk.templates.announcement.Announcement)
+            +RenderWith(ann, chlk.templates.announcement.Announcement)(
+                userRole = userRole
+            )
     .bottom-block
         +Button()(
         type="submit",
