--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/AdminDayCalendarPopUp.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/AdminDayCalendarPopUp.jade
@@ -7,11 +7,13 @@ teacher = clazz.getTeacher()
                 +ActionLink('class', 'details', clazz.getId())=clazz.getName()
         .info
             .img-box
-                +ActionLink('teacher', 'info', teacher.getId())
-                    +PersonImg(teacher, 40)
+                if teacher
+                    +ActionLink('teacher', 'info', teacher.getId())
+                        +PersonImg(teacher, 40)
             .title-holder
                 p.day-down.teacher-name
-                    +ActionLink('teacher', 'info', teacher.getId())=teacher.getDisplayName()
+                    if teacher
+                        +ActionLink('teacher', 'info', teacher.getId())=teacher.getDisplayName()
                 div
                     p.day-down
                         +ActionLink('class', 'details', clazz.getId())="RM " + self.getRoomNumber()
