refactoring in UI styled attendance > class > List

--- a/Chalkable.Web/assets/jade/activities/school/SchoolPeople.jade
+++ b/Chalkable.Web/assets/jade/activities/school/SchoolPeople.jade
@@ -33,4 +33,4 @@
                             +Select('gradeLevelId')#gradeLevelId
                                 each item in gradeLevels
                                     +Option(item.getId(), item.getName())
-                +RenderWith(self.getUsersList(), chlk.templates.people.UsersList)
+                +RenderWith(self.getUsersList(), chlk.templates.people.UsersListTpl)
