--- a/Chalkable.Web/assets/jade/activities/admin/school-person-list.jade
+++ b/Chalkable.Web/assets/jade/activities/admin/school-person-list.jade
@@ -18,6 +18,6 @@
                                 +Option('', 'All Grade Levels', true)
                                 each item in self.gradeLevels
                                     +Option(item.getId().valueOf().toString(), item.getName())
-            +RenderWith(self.getUsersList(), chlk.templates.people.UsersList)(
+            +RenderWith(self.getUsersList(), chlk.templates.people.UsersListTpl)(
                 userRole = self.getUserRole()
             )
