--- a/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
@@ -1,3 +1,12 @@
+mixin SummaryInfo(presentCount, allStudentsCount)
+    -presentPersent = Math.round((presentCount * 100) / allStudentsCount)
+    .summary-info
+        .title= presentCount + '/' + allStudentsCount + ' PRESENT'
+        .slide-bar
+            div(style="width: " + presentPersent + "%").inner-bar
+
+
+
 .students-list.loader-container
     topData = self.getTopData()
     topItems = topData.getTopItems()
@@ -31,12 +40,12 @@
             +Hidden('classid', selectedId && selectedId.valueOf())
             items = self.getItems()
             .top.panel-bg
+                +SummaryInfo(self.getPresentStudents().length, items.length)
                 BUTTON(href="javascript:", name="submitType", type="submit", id="submit-attendance-button").chlk-button.action-button.message-button.blue-gradient-btn POST IT
                 if(self.getItems().length > 0)
                     +ActionLinkWithPrepend('attendance', 'markAll',
                         [selectedId.valueOf(), self.getDate().toStandardFormat()].concat(additionalParams)
                     )#all-present-link=Msg.Mark_all_Present
-                //+Button(href="javascript:", name="submitType", value="POST ATTENDANCES", type="submit", id="submit-attendance-button")
             .action-bar.buttons.filter
                 .container.panel-bg
                     .left
