--- a/Chalkable.Web/assets/jade/activities/people/UsersGrid.jade
+++ b/Chalkable.Web/assets/jade/activities/people/UsersGrid.jade
@@ -3,6 +3,6 @@ input(type="hidden", name="start", value=(self.getStart() || 0))
 Button(type="submit", class="scroll-start-button x-hidden", name="submitType", value="scroll")
 +ListView(self.getUsers())(
     selectedIndex = selectedIndex, infiniteScroll = true).people-list
-    +RenderWith(self.getUsers(), chlk.templates.people.UsersForGrid)
+    +RenderWith(self.getUsers(), chlk.templates.people.UsersForGridTpl)
 
 
