--- a/Chalkable.Web/assets/sass/partials/main/_attendance.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_attendance.scss
@@ -590,6 +590,32 @@ BODY {
           }
 
           .set-attendance-list-form{
+            .summary-info{
+              display: inline-block;
+              margin: 15px;
+              float: left;
+              .title{
+                font-size: 12px;
+                font-weight: bold;
+                margin-bottom: 5px;
+                text-shadow: 1px 1px 0 white;
+              }
+              .slide-bar, .inner-bar{
+                @include border-radius(4px);
+              }
+              .slide-bar{
+                width: 100px;
+                height: 8px;
+                background-color: #c6c6c6;
+                @include box-shadow(0px 1px 1px 0.2px #666666 inset);
+                .inner-bar{
+                  background-color: #3f724b;
+                  @include box-shadow(0px 1px 1px 0.2px #2d5236 inset);
+                  height: 100%;
+                  height: 8px;
+                }
+              }
+            }
             #submit-attendance-button{
               font-weight: bold;
               font-size: 14px;
