--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/DayPeriodPopUp.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/DayPeriodPopUp.jade
@@ -14,7 +14,7 @@
                 a Rm #{roomNumber}
             br
         p.day-down
-            a #{period.getStartTime()} #{period.getEndTime()}
+            a #{period.displayPeriodTimeRange()}
         br
         p.day-down
             a=date.format('DD, MM d')
