--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
@@ -16,7 +16,7 @@ mixin AppAttachmentBlock(item, pictureHref, i)
         //gradingMapping = studentAnnouncementsInfo.getMapping()
         //getGrade = function(value){return GradingStyler.getLetterByGrade(value, gradingMapping, gradingStyle)}
         //getGradeNumber = function(value){return GradingStyler.getGradeNumberValue(value, gradingMapping, gradingStyle)}
-    +FeedItem(self)
+    +FeedItem(self).animated-item
     .panel-bg
         .action-bar.buttons
             .container
