--- a/Chalkable.Web/assets/jade/activities/profile/Addresses.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/Addresses.jade
@@ -2,7 +2,8 @@ each address in self.getItems()
     textarea(
         class="home-address",
         data-id= address && address.getId() ? address.getId().valueOf() : null,
-        data-type=0
+        data-type=0,
+        readonly
     )= address ? address.getValue() : ''
 
 
