--- a/Chalkable.Web/assets/jade/activities/profile/profile-info-blocks.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/profile-info-blocks.jade
@@ -54,8 +54,8 @@ mixin ProfileInfoForm(controller, model)
                     button(type="button").simple-gray-button.file Upload
                         +FileUpload(controller, 'uploadPicture', [model.getId().valueOf()])#add-attachment.simple-gray-button
                 .name-block
-                    input(name="firstname", value=model.getFirstName(), class="validate[required]")
-                    input(name="lastname", value=model.getLastName(), class="validate[required]")
+                    input(name="firstname", value=model.getFirstName(), readonly)
+                    input(name="lastname", value=model.getLastName(), readonly)
                     input(type="hidden", name="id", value=model.getId())
                     input(type="hidden", name="salutation", value=model.getSalutation())
             .sections
@@ -72,7 +72,8 @@ mixin ProfileInfoForm(controller, model)
                             data-type=2,
                             data-isPrimary=true,
                             value=primaryPhone,
-                            class="validate[custom[phone], required] primary-phone"
+                            class="primary-phone"
+                            readonly
                             )
                             input(name="phonesValue", value=model.getPhonesValue(), type="hidden")
                             +Select('cellService')(data-placeholder="*Cell Service*", value="")#cellService.grey-combo
@@ -84,14 +85,10 @@ mixin ProfileInfoForm(controller, model)
                                 option Other
                         .section-data
                             .info-title=Msg.Birthday
-                            +DateSelect().grey-combo-container(
-                            value=model.getBirthDate() ? model.getBirthDate().getDate() : null,
-                            name='birthdate'
-                            ).bd-select
-                            .gender-part
-                                +Select('gender')(data-placeholder="Gender")#genderSelect.grey-combo
-                                    +Option('m', 'Male', model.getGender() && model.getGender().toLowerCase() == 'm')
-                                    +Option('f', 'Female', model.getGender() && model.getGender().toLowerCase() == 'f')
+                            .data-info.low-font-size=model.getBirthDateText()
+                        .section-data.gender-box
+                            div(class=model.getGender() ? model.getGender().toLowerCase() : '').gender-img-box
+                            p=model.getGenderFullText()
                 .sections-info
                     .section-title=Msg.Home
                     div
@@ -99,14 +96,14 @@ mixin ProfileInfoForm(controller, model)
                             .info-title=Msg.Home_Phone
                             input(
                             value=homePhone,
-                            class="validate[custom[phone], required] home-phone",
+                            class="home-phone",
                             data-id=homePhone && model.getHomePhone().getId().valueOf(),
                             data-type=0,
                             data-isPrimary=false,
+                            readonly
                             )
                         .section-data
                             .info-title=Msg.Home_Address
-                                a.add-address.add-button add
                             input(name="addressesValue", value=model.getAddressesValue(), type="hidden")
                             .adresses
                                 addressesModel = new chlk.models.people.Addresses()
