--- a/Chalkable.Web/assets/jade/common/logout.jade
+++ b/Chalkable.Web/assets/jade/common/logout.jade
@@ -1,2 +1,3 @@
 -currentUserName = self.getCurrentPerson().getDisplayName()
 +Logout('account', 'logout', currentUserName)
+//+ActionLink('account', 'redirectToINOW') Go to INOW
