--- a/Chalkable.Web/assets/sass/partials/controls/_select.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_select.scss
@@ -38,3 +38,79 @@
     }
   }
 }
+
+.chlk-multiple-select{
+  position: relative;
+
+  >a{
+    >.chlk-multiple-select-text{
+      background: transparent;
+      border: none;
+      cursor: pointer;
+      width: 64px;
+      padding-left: 15px;
+      padding-right: 25px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    cursor: pointer;
+  }
+
+  .chlk-multiple-triangle{
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-top: 6px solid #a5a5a5;
+    position: absolute;
+    top: 13px;
+    right: 13px;
+    @include transition-property("all");
+    @include transition-duration(0.2s);
+  }
+
+  &.selected{
+    background: #ededed;
+
+    .chlk-multiple-triangle{
+      @include transform(rotate(180deg));
+      z-index: 1001;
+    }
+
+    >a{
+      >.chlk-multiple-select-text{
+        z-index: 1001;
+        background: #ededed;
+        position: relative;
+      }
+    }
+  }
+
+  &:not(.selected){
+    >a{
+      >div{
+        color: #4d92a8;
+        text-shadow: 0 1px 0 white;
+      }
+    }
+
+    .chlk-multiple-select-list{
+      display: none;
+    }
+  }
+
+  .chlk-multiple-select-list{
+    position: absolute;
+    z-index: 1000;
+    background: #ededed;
+    margin-top: -2px;
+    margin-left: -1px;
+    @include box-shadow(0 0 18px #aaa);
+
+    .labeled-checkbox{
+      display: block;
+      text-align: left;
+      margin: 5px 9px;
+      width: 77px;
+    }
+  }
+}
