--- a/Chalkable.Web/assets/jade/activities/apps/my-apps.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/my-apps.jade
@@ -24,13 +24,17 @@ mixin MyAppsIconLink(app, editable)
 .my-apps
     .action-bar.not-transparent
         .container.panel-bg.buttons-toolbar
+            personId = self.getPersonId()
             if self.isEditable()
-                +ActionLink('appmarket', 'updateMyApps', false).edit.toolbar-btn Done
+                +ActionLink('appmarket', 'myApps', false).edit.toolbar-btn Done
             else
-                +ActionLink('appmarket', 'updateMyApps', true).edit.toolbar-btn Edit
+                +ActionLink('appmarket', 'myApps', true).edit.toolbar-btn Edit
             +ActionLink('appmarket', 'list').app-store.toolbar-btn App Store
             +ActionLink('appmarket', 'myApps').my-apps.toolbar-btn My Apps
+            +ActionForm('', '')
+                +SearchBox(chlk.services.AppMarketService, "getMyAppsByFilter",
+                chlk.templates.apps.MyAppsSearchBoxTpl)#app-market-searchbox(name="appMarketSearch", triggerBtnId="app-market-search-btn")
+                button(type="submit").search-btn#app-market-search-btn
     .apps
-
             each app in self.apps.getItems()
                 +MyAppsIconLink(app, self.isEditable())
