--- a/Chalkable.Web/assets/sass/partials/main/_buttons.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_buttons.scss
@@ -46,6 +46,10 @@
 }
 
 .simple-gray-button{
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 30px;
+  cursor: pointer;
   height: 30px;
   width: 119px;
   @include border-radius(24px);
