fixed css for textarea

--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -69,7 +69,7 @@ INPUT, TEXTAREA, .text-field{
   padding: 5px;
   color: #6e6e6e;
   margin: 0;
-  padding: 1px 3px;
+  //padding: 1px 3px;
 
   &:focus{
     outline: none;
