--- a/Chalkable.Web/assets/jade/activities/settings/school-person-settings-page.jade
+++ b/Chalkable.Web/assets/jade/activities/settings/school-person-settings-page.jade
@@ -8,9 +8,9 @@ mixin ResetPasswordBlock()
             +ActionForm('account', 'teacherChangePassword')#info-edit-form.with-ok
                 .title
                     .name-block
-                        input(name="oldPassword", type="password", class="validate[required]", placeholder=Msg.Old_Password)
-                        input(name="newPassword", id="newPassword", type="password", class="validate[required]", placeholder=Msg.New_Password)
-                        input(name="newPasswordConfirmation", id="newPasswordConfirmation", type="password", class="validate[required, equals[newPassword]]", placeholder=Msg.New_Password_Confirm)
+                        input(name="oldPassword", type="password", class="validate[required] padding-1-3", placeholder=Msg.Old_Password)
+                        input(name="newPassword", id="newPassword", type="password", class="validate[required] padding-1-3", placeholder=Msg.New_Password)
+                        input(name="newPasswordConfirmation", id="newPasswordConfirmation", type="password", class="validate[required, equals[newPassword]] padding-1-3", placeholder=Msg.New_Password_Confirm)
                 br
                 .section-buttons
                     +Button()(type="submit").special-button.yellow-button#submit-pwd-button=Msg.Save
