fixed tooltips for classes bar

--- a/Chalkable.Web/assets/sass/partials/controls/_left-right-toolbar.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_left-right-toolbar.scss
@@ -173,6 +173,9 @@
           .text-container{
             text-align: center;
             display: inline-block;
+            width: 56px;
+            text-overflow: ellipsis;
+            overflow: hidden;
             padding-top: 35px;
             font-size: 12px;
             line-height: 14px;
