--- a/Chalkable.Web/assets/jade/activities/class/TopBar.jade
+++ b/Chalkable.Web/assets/jade/activities/class/TopBar.jade
@@ -3,7 +3,7 @@ if self.getController()
     +ActionLinkWithPrepend(self.getController(), self.getAction(), self.getParams(), self.getId())(class=self.isPressed() ? "pressed " : "", index=self.getIndex()).item.class-button.button-link
         .img-wrapper
             +ClassImg(self.getCourse(), 45, 80)
-        SPAN.text-container= self.getName()
+        SPAN(data-tooltip-type='overflow', data-tooltip=self.getName()).text-container= self.getName()
 else
     BUTTON(
         classId=self.getId(),
@@ -15,4 +15,4 @@ else
     ).item.class-button.validate-skip
         .img-wrapper
             +ClassImg(self.getCourse(), 45, 80).avatar
-        SPAN.text-container= self.getName()
+        SPAN(data-tooltip-type='overflow', data-tooltip=self.getName()).text-container= self.getName()
