--- a/Chalkable.Web/assets/sass/partials/main/messages/_add.scss
+++ b/Chalkable.Web/assets/sass/partials/main/messages/_add.scss
@@ -45,7 +45,7 @@
     .form-buttons{
       margin-left:auto;
       margin-right:auto;
-      width: 42%;
+      text-align: center;
     }
 
     .close{
