--- a/Chalkable.Web/assets/sass/partials/main/developer/_developer_pages.scss
+++ b/Chalkable.Web/assets/sass/partials/main/developer/_developer_pages.scss
@@ -4,3 +4,4 @@
 @import "partials/main/developer/_api";
 @import "partials/main/developer/_docs";
 @import "partials/main/developer/_payment";
+@import "partials/main/developer/_settings";
