--- a/Chalkable.Web/assets/sass/partials/main/popups/_attach_app.scss
+++ b/Chalkable.Web/assets/sass/partials/main/popups/_attach_app.scss
@@ -40,6 +40,14 @@
           padding-right: 25px;
         }
 
+        .no-apps{
+          font-family: pacifico;
+          text-align: center;
+          vertical-align: middle;
+          margin-top: 160px;
+          font-size: 23px;
+        }
+
         .apps{
           padding: 15px 25px;
           width: 670px;
