--- a/Chalkable.Web/assets/jade/activities/discipline/disciplines-summary.jade
+++ b/Chalkable.Web/assets/jade/activities/discipline/disciplines-summary.jade
@@ -11,7 +11,7 @@
                         data-controller="discipline",
                         data-action="list"
                     )#discipline-date
-                    lable Search Students
+                    label Search Students
                     +SearchBox(chlk.services.StudentService, "getStudentsByFilter", chlk.templates.messages.RecipientAutoComplete)#personId(
                         name="personId",
                         value=""
