--- a/Chalkable.Web/assets/jade/activities/profile/ProfileApps.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/ProfileApps.jade
@@ -1,6 +1,6 @@
 mixin CounterBox(title, value, editable, controller, action)
     .counter(attributes)
-        lable=title
+        label=title
         span
             input(name='value', value=value)
 
