--- a/Chalkable.Web/assets/jade/activities/apps/app-picture.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-picture.jade
@@ -5,7 +5,16 @@ mixin Thumbnail(url, title, dimsX, dimsY, pictureCls, readOnly)
         +LoadingImage(src=url)
 
 
-mixin IconBox(id, url, title, dimsX, dimsY, pictureCls, readOnly, tplLink)
+mixin IconBox(pict)
+    id = pict.pictureId
+    url = pict.pictureUrl
+    title = pict.title
+    dimsX = pict.width
+    dimsY = pict.height
+    pictureCls = pict.pictureClass
+    readOnly = !pict.editable
+    tplLink = self.templateDownloadLink
+
     +Hidden('app' + title + 'Id', id.valueOf())
     if id.valueOf() || readOnly
         +Thumbnail(url, title, dimsX, dimsY, pictureCls, readOnly)
@@ -17,4 +26,4 @@ mixin IconBox(id, url, title, dimsX, dimsY, pictureCls, readOnly, tplLink)
                     +FileUpload('apps', 'uploadPicture', [dimsX, dimsY, title]).simple-gray-button
                 a(href=tplLink).download-link Download Template
 
-+IconBox(self.pictureId, self.pictureUrl, self.title, self.width, self.height, self.pictureClass, !self.editable, self.templateDownloadLink)
++IconBox(self)
