fixed sysadmin apps page

--- a/Chalkable.Web/assets/jade/activities/apps/Apps.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/Apps.jade
@@ -4,13 +4,13 @@ mixin AppManagementControls(id, state, liveId)
             span=state.toString(true)
         else
             +ActionLink('apps', 'approve', id).btn Approve
-            +ActionLink('apps', 'decline', id).btn Decline
+            +ActionLink('apps', 'decline', id).btn Reject
     else
         if state.getStateId() != chlk.models.apps.AppStateEnum.SUBMIT_FOR_APPROVE
             span=state.toString(false)
         else
             +ActionLink('apps', 'approve', id).btn Approve
-            +ActionLink('apps', 'decline', id).btn Decline
+            +ActionLink('apps', 'decline', id).btn Reject
 
 .apps-list
     +Grid('apps', 'page', self).not-transparent
