--- a/Chalkable.Web/assets/jade/activities/people/UsersGrid.jade
+++ b/Chalkable.Web/assets/jade/activities/people/UsersGrid.jade
@@ -1,8 +1,11 @@
 .loader
 input(type="hidden", name="start", value=(self.getStart() || 0))
+//input(type="hidden", name="count", value=(self.getCount() || 10))
 Button(type="submit", class="scroll-start-button x-hidden", name="submitType", value="scroll")
 +ListView(self.getUsers())(
-    selectedIndex = selectedIndex, infiniteScroll = true).people-list
+    selectedIndex = selectedIndex, infiniteScroll = true,
+    goTopButton = true, loadAllButtonTitle = 'LOAD ALL STUDENTS',
+    loadAllPopUpTitle = 'Students').people-list
     +RenderWith(self.getUsers(), chlk.templates.people.UsersForGridTpl)
 
 
