--- a/Chalkable.Web/assets/jade/controls/list-view.jade
+++ b/Chalkable.Web/assets/jade/controls/list-view.jade
@@ -1,10 +1,15 @@
 mixin ListView(data)
     -self.prepareData(data, attributes)
+    -config=self.getConfigs()
     .chlk-grid(attributes)
         input.grid-focus
+        .back-top.x-hidden
+            .back-top-arrow
+            A(href="#top").new-popup
+        .load-all-popup.x-hidden
+            .outer-container.new-popup
+            .inner-container
+                .title=data.getTotalCount() + ' ' + config.loadAllPopUpTitle
+                .load-all-button
+                    +ActionLinkButton().blue-gradient-btn=config.loadAllButtonTitle
         block
-
-
-
-
-
