--- a/Chalkable.Web/assets/sass/partials/controls/_grid.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_grid.scss
@@ -63,8 +63,79 @@ BODY {
     }
   }
 
+  .new-popup{
+    @include border-radius(5px);
+    @include box-shadow(inset 0 2px 4px 0px #fff);
+    background-color: #f8f8f8;
+    opacity: 0.8;
+  }
 
+  .load-all-popup{
+    width: 210px;
+    height: 93px;
+    left: 950px;
+    top: 500px;
+    text-align: center;
 
+    .outer-container.new-popup{
+      width: 100%;
+      height: 100%;
+
+    }
+    .inner-container{
+      position: absolute;
+      padding-top: 20px;
+      margin-left: 25px;
+      left: 0px;
+      top: 0px;
+      .title, .load-all-button{
+        position: relative;
+      }
+      .title{
+        text-shadow: 1px 1px 0 white;
+        font-size: 12px;
+        font-weight: bold;
+        margin-bottom: 10px;
+      }
+      .load-all-button{
+        .chlk-button{
+          font-weight: bold;
+          padding: 6px 15px 6px 15px;
+        }
+        z-index: 1000;
+      }
+    }
+  }
+
+  .back-top, .load-all-popup{
+    position: fixed;
+    display: inline-block;
+    z-index: 100;
+  }
+  .back-top{
+    width: 72px;
+    height: 72px;
+    left: 1062px;
+    top: 500px;
+
+    .back-top-arrow{
+      display: inline-block;
+      width: 26px;
+      height: 20px;
+      position: absolute;
+      top: 24px;
+      background: url(images/people/user-grid-top-arrow.png) 0px 0px no-repeat;
+      z-index: 1000;
+      left: 23px;
+    }
+    >A{
+      width: 100%;
+      display: block;
+      height: 100%;
+      text-align: center;
+      vertical-align: middle;
+    }
+  }
 }
 
 .grid{
