--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -227,7 +227,7 @@
             var finalizedClassesIds = parseJsonToArray('@ViewData.GetValueOrNull(ViewConstants.FINALIZED_CLASSES_IDS)'); 
             var attendanceReasons = parseJsonToArray('@ViewData.GetValueOrNull(ViewConstants.ATTENDANCE_REASONS)');
             var gradeLevels = parseJsonToArray('@ViewData.GetValueOrNull(ViewConstants.GRADE_LEVELS)');
-
+            var userClaimns = parseJsonToArray('@ViewData.GetValueOrNull(ViewConstants.USER_CLAIMS)');
         </script>
     
     @if (Chalkable.Web.Tools.CompilerHelper.IsDebug)
