--- a/Chalkable.Web/assets/sass/partials/main/announcement/_view.scss
+++ b/Chalkable.Web/assets/sass/partials/main/announcement/_view.scss
@@ -8,7 +8,6 @@ $red-color: #842727;
 
 .announcement-view-page{
   @include border-radius(9px);
-  overflow: hidden;
 }
 
 .announcement-view{
@@ -405,6 +404,38 @@ $red-color: #842727;
 
             .comment-icon{
               display: none;
+            }
+          }
+        }
+
+        .alerts-pop-up{
+          display: none;
+          top: 72px;
+          right: -45px;
+          width: 166px;
+          padding: 0;
+
+          .alerts-pop-up-content{
+            overflow: hidden;
+            @include border-radius(6px);
+
+            .alerts-pop-up-item{
+              font: normal 12px Georgia italic;
+              color: #7c7c7c;
+              text-shadow: 0 1px 0 white;
+              padding: 10px 14px 14px;
+
+              &:not(:last-child) {
+                border-bottom: 1px solid #d7d7d7;
+              }
+
+              &.disabled{
+                color: #ababab;
+              }
+
+              &:hover{
+                background: #fafafa;
+              }
             }
           }
         }
