--- a/Chalkable.Web/assets/sass/partials/controls/_grid.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_grid.scss
@@ -101,6 +101,9 @@ BODY {
         .chlk-button{
           font-weight: bold;
           padding: 6px 15px 6px 15px;
+          BUTTON{
+            padding: 0px;
+          }
         }
         z-index: 1000;
       }
@@ -127,6 +130,7 @@ BODY {
       background: url(images/people/user-grid-top-arrow.png) 0px 0px no-repeat;
       z-index: 1000;
       left: 23px;
+      cursor: pointer;
     }
     >A{
       width: 100%;
@@ -134,6 +138,7 @@ BODY {
       height: 100%;
       text-align: center;
       vertical-align: middle;
+      cursor: pointer;
     }
   }
 }
