--- a/Chalkable.Web/assets/sass/partials/main/developer/_app.scss
+++ b/Chalkable.Web/assets/sass/partials/main/developer/_app.scss
@@ -196,7 +196,7 @@ BODY {
                             top: 9px
                           }
 
-                          button{
+                          .simple-gray-button{
                             width: 101px;
                             height: 30px;
                           }
